# easy_password

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: rust.yml
src/: bcrypt.rs  lib.rs
