[package]
name = "easy_password"
version = "0.1.3"
authors = ["Chris Williams <chrispwill@gmail.com>"]
description = "Easy password hashing (includes bcrypt)"
license = "MIT"
readme = "README.md"
keywords = ["bcrypt", "password", "hash"]
repository = "https://github.com/ChrisPWill/easy_password"
homepage = "https://github.com/ChrisPWill/easy_password"
edition="2018"

[dependencies]
hmac = "0.12.1"
sha2 = "0.10.6"
bcrypt = "0.13.0"
